# nrfi-predictor

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  COMMANDS.md  CONTRIBUTING.md  DATA_CONTRACTS.md  Dockerfile.aws  LICENSE  PROJECT_STATE.md  README.md  SETUP_CHECKLIST.md  app.py  predictions_dashboard.html  pyproject.toml  render.yaml  requirements-model.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AUTONOMOUS_OPERATIONS.md  AWS_DEPLOYMENT.md  METHODOLOGY.md
experiments/: half_inning_backtest.py
models/: nrfi_model.joblib  nrfi_model_metadata.json
nrfi/: _obs.py  _posthog.py  api.py  assembly_audit.py  audit_monthly.py  aws_pregame_collector.py  aws_probability_api.py  aws_publish_batter_profiles.py  aws_publish_context_features.py  aws_publish_profiles.py  aws_publish_team_features.py  batter_eligibility.py  batter_extraction.py  batter_live_profiles.py  batter_profile_loader.py  batter_top_of_order.py  build_features.py  config.py  context_features.py  context_features_iana.py  context_profile_loader.py  core_v2_2_matrix.py  core_v2_evaluation.py  core_v2_matrix.py  data_readiness.py  deterministic_resampling.py  ensemble.py  features.py  forward_admission.py  grade_nightly.py  guards.py  ingest_first_inning_outcomes.py  ingest_opticodds.py  ingest_sportsdata.py  ingest_statcast.py  lifecycle.py  lineage.py  lineup_admission.py  lineup_snapshot.py  model_comparison.py  (+16 more)
reports/: backtest.md  backtest_metrics.csv  backtest_predictions.csv  calibration_table.csv  data_coverage.md
schemas/: input-manifest-v1.schema.json  lineage-envelope-v1.schema.json
scripts/: aws_baseline_replay.py  bootstrap.ps1  bootstrap.sh  build_pitcher_statcast_features.py  deploy.sh  evaluate_holdout.py  export_duckdb_fi_aggregates.py  init_snowflake.py  load_raw_dataset.py  promote_model.py
sql/: 000_raw.sql  001_core.sql  002_features.sql  003_ml.sql
src/: advanced_features.py  api.py  app_production.py  config.py  features.py  ingest_opticodds.py  ingest_sportsdata.py  ingest_statcast.py  predict_daily.py  snowflake_loader.py  train.py
templates/: index.html
terraform/: .terraform.lock.hcl  README.md  analytics.tf  batch.tf  budget.tf  main.tf  outputs.tf  pregame_collector.tf  probability_api.tf  storage.tf  variables.tf  versions.tf
tests/: fixture_payloads.py  test_assembly_audit.py  test_aws_pregame_collector.py  test_aws_probability_api.py  test_aws_publish_batter_profiles.py  test_aws_publish_context_features.py  test_aws_publish_profiles.py  test_aws_publish_team_features.py  test_backtest.py  test_batter_eligibility.py  test_batter_extraction.py  test_batter_live_profiles.py  test_batter_profile_loader.py  test_batter_top_of_order.py  test_ci_release_gate_probe.py  test_cli_train.py  test_context_features.py  test_context_features_iana.py  test_context_profile_loader.py  test_core_v2_2_matrix.py  test_core_v2_evaluation.py  test_labels.py  (+40 more)
(+144 files in other folders)
