[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nrfi-predictor"
version = "1.0.0"
description = "Autonomous MLB first-inning (NRFI/YRFI) prediction pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "joblib>=1.3",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
nrfi = "nrfi.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["nrfi", "nrfi.data"]

[tool.ruff]
line-length = 120
target-version = "py310"
# Legacy prototype modules (Snowflake/SportsDataIO scaffolding) are exempt;
# the autonomous pipeline package and its tests are linted.
include = ["src/nrfi/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
