[project]
name = "nrfi-predictor"
version = "0.0.0"
description = "Fail-closed MLB first-inning probability system"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.104.0",
  "joblib>=1.3.0",
  "lightgbm>=4.0.0",
  "loguru>=0.7.0",
  "meteostat>=1.6.5",
  "MLB-StatsAPI>=1.6.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "pyarrow>=15.0.0",
  "pybaseball>=2.2.5",
  "pydantic>=2.4.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "scikit-learn>=1.3.0",
  "sentry-sdk>=1.39.0",
  "shap>=0.43.0",
  "snowflake-connector-python>=3.6.0",
  "snowflake-sqlalchemy>=1.5.0",
  "sqlalchemy>=2.0.0",
  "tenacity>=8.2.0",
  "tzdata==2026.3",
  "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
  "duckdb>=1.5.0",
  "hypothesis>=6.0.0",
  "ipykernel>=6.0.0",
  "pre-commit>=4.0.0",
  "pyright>=1.1.0",
  "pytest>=7.4.0",
  "ruff==0.15.13",
]

[tool.uv]
constraint-dependencies = ["numba>=0.66.0"]
default-groups = ["dev"]
package = false
required-version = "==0.11.28"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pyright]
exclude = [".venv", "**/__pycache__"]
# Existing dynamic modules remain an explicit, reviewable adoption baseline.
# New files and all unlisted modules must pass basic checking.
ignore = [
  "nrfi/api.py",
  "nrfi/audit_monthly.py",
  "nrfi/build_features.py",
  "nrfi/ensemble.py",
  "nrfi/ingest_first_inning_outcomes.py",
  "nrfi/predict_daily.py",
  "nrfi/snowflake_loader.py",
  "nrfi/train.py",
  "nrfi/venn_abers.py",
  "tests/test_gameday_simulation.py",
  "tests/test_model_registry.py",
  "tests/test_raw_loader.py",
]
include = ["nrfi", "scripts", "tests"]
pythonVersion = "3.11"
reportMissingTypeStubs = false
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."
